# MinimalQml

./: CMakeLists.txt  build.sh  compile_commands.json  device.sh
.cache/clangd/index/: main.cpp.49FBEF79F06E80B4.idx  mocs_compilation.cpp.FBFD039A0E1845F5.idx
src/: CMakeLists.txt  main.cpp  main.qml
